--- a/angular-ui/src/app/modules/dashboard/map-list/map-list.component.css
+++ b/angular-ui/src/app/modules/dashboard/map-list/map-list.component.css
@@ -27,9 +27,8 @@
 }
 
 .contenido-vista{
-	/* padding: 0px 25px; */
 	min-height: 100%;
-	/* background: rgb(138, 138, 133); */
+	max-height: 100%;
 	overflow: auto;
 }
 
@@ -65,7 +64,8 @@
 	width: 100%;
 	height: 100%;
 	display: flex;
-	flex-direction: wrap;
+	flex-wrap: wrap;
+	/* background-color: yellow; */
 }
 
 .file{
