--- a/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
+++ b/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
@@ -43,7 +43,7 @@
 									</ng-container>
 								</th>
 								<td mat-cell *matCellDef="let element">
-									<span><span class="etiqueta-ext mr-10" [ngClass]="{amarillo: element.ext == 'mbtiles', azul: element.ext == 'json', celeste: element.ext == 'geojson'}">{{element.ext | uppercase}}</span>{{element.name.substring(0, element.name.lastIndexOf("."))}}</span>
+									<span><span class="etiqueta-ext mr-10" [ngClass]="{amarillo: element.ext == 'mbtiles', azul: element.ext == 'json', celeste: element.ext == 'geojson'}">{{element.ext | uppercase}}</span>{{element.name}}</span>
 								</td>
 							</ng-container>
 						</div>
@@ -88,7 +88,7 @@
 						<td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
 						  <div *ngIf="element.log" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
 							<div class="contenido-expanded">
-								<p style="font-family: monospace;" *ngFor="let log of element.log">{{log}}</p>
+								<p class="log" style="font-family: monospace;" *ngFor="let log of element.log" [innerHtml]="log"></p>
 							</div>
 						  </div>
 						</td>
@@ -122,7 +122,7 @@
 										<mat-icon aria-hidden="false" aria-label="Example home icon">description</mat-icon>
 									</div>
 									<div class="file-name">
-										<span>{{item.name.substring(0, item.name.lastIndexOf("."))}}</span>
+										<span>{{item.name}}</span>
 									</div>
 									<div class="file-ext">
 										<span class="etiqueta-ext" [ngClass]="{amarillo: item.ext == 'mbtiles', azul: item.ext == 'json', celeste: item.ext == 'geojson'}">{{item.ext | uppercase}}</span>
