--- a/angular-ui/src/styles.css
+++ b/angular-ui/src/styles.css
@@ -70,3 +70,11 @@ tr.mat-header-row {
   overflow: hidden;
   box-shadow: 0 5px 11px 0 rgb(0 0 0 / 18%), 0 4px 15px 0 rgb(0 0 0 / 15%) !important;
 }
+
+p, span, div, i {
+  user-select: none;
+}
+
+p.log {
+  user-select: text;
+}
