--- a/angular-ui/src/app/modules/dashboard/maps-section/list-view/list-view.component.html
+++ b/angular-ui/src/app/modules/dashboard/maps-section/list-view/list-view.component.html
@@ -1,1 +1,110 @@
-<p>list-view works!</p>
+<div class="list-view-container">
+    <form>
+        <table mat-table [dataSource]="maps" multiTemplateDataRows matSort matSortActive="name" matSortDisableClear
+            matSortDirection="desc">
+            <div>
+                <!-- name column -->
+                <div>
+                    <ng-container matColumnDef="name">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
+                            <span>Nombre</span>
+                            <ng-container *ngIf="isNombreAsc">
+                                <button mat-icon-button (click)="sort('nombre', 'asc')" class="icon-ordenar">
+                                    <mat-icon>north</mat-icon>
+                                </button>
+                            </ng-container>
+                            <ng-container *ngIf="!isNombreAsc">
+                                <button mat-icon-button (click)="sort('nombre', 'desc')" class="icon-ordenar">
+                                    <mat-icon>south</mat-icon>
+                                </button>
+                            </ng-container>
+                        </th>
+                        <td mat-cell *matCellDef="let element">
+                            <span class="etiqueta-ext"
+                                [ngClass]="{amarillo: element.ext == 'mbtiles', azul: element.ext == 'json', celeste: element.ext == 'geojson'}">{{element.ext
+                                | uppercase}}</span>
+                            <span>{{element.name}}</span>
+                        </td>
+                    </ng-container>
+                </div>
+
+                <!-- date_creation column -->
+                <div>
+                    <ng-container matColumnDef="date_creation">
+                        <th mat-header-cell *matHeaderCellDef>
+                            Fecha de Creación
+                            <ng-container *ngIf="isFechaAsc">
+                                <button mat-icon-button class="icon-ordenar" (click)="sort('fecha', 'asc')">
+                                    <mat-icon>north</mat-icon>
+                                </button>
+                            </ng-container>
+                            <ng-container *ngIf="!isFechaAsc">
+                                <button mat-icon-button class="icon-ordenar" (click)="sort('fecha', 'desc')">
+                                    <mat-icon>south</mat-icon>
+                                </button>
+                            </ng-container>
+                        </th>
+                        <td mat-cell *matCellDef="let element">
+                            <span>{{element.date_creation | date : 'dd-MM-yyyy'}}</span>
+                        </td>
+                    </ng-container>
+                </div>
+
+                <!-- owner column -->
+                <div>
+                    <ng-container matColumnDef="owner">
+                        <th mat-header-cell *matHeaderCellDef>Propietario</th>
+                        <td mat-cell *matCellDef="let element">
+                            <span>{{element.owner}}</span>
+                        </td>
+                    </ng-container>
+                </div>
+
+                <!-- loading columb -->
+                <div>
+                    <ng-container matColumnDef="loading">
+                        <th mat-header-cell *matHeaderCellDef></th>
+                        <td mat-cell *matCellDef="let element">
+                            <mat-spinner *ngIf="element.estado == 'PROCESANDO'" [diameter]="30"></mat-spinner>
+                        </td>
+                    </ng-container>
+                </div>
+            </div>
+
+            <ng-container matColumnDef="expandedDetail">
+                <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+                    <div *ngIf="element.log" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                        <div class="contenido-expanded">
+                            <p class="log" style="font-family: monospace;" *ngFor="let log of element.log"
+                                [innerHtml]="log"></p>
+                        </div>
+                    </div>
+                </td>
+            </ng-container>
+
+
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="example-element-row"
+                [class.example-expanded-row]="expandedElement === element"
+                (contextmenu)="onContextMenu($event, element)"
+                (click)="expandedElement = expandedElement === element ? null : element">
+            </tr>
+            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+        </table>
+    </form>
+
+    <div style="visibility: hidden; position: fixed;" [style.left]="contextMenuPosition.x"
+        [style.top]="contextMenuPosition.y" [matMenuTriggerFor]="contextMenu">
+    </div>
+    <mat-menu #contextMenu="matMenu">
+        <ng-template matMenuContent>
+            <button *ngIf="item && item.ext == 'mbtiles'" mat-menu-item (click)="descargar(item)">
+                <mat-icon>file_download</mat-icon>Descargar
+            </button>
+            <button mat-menu-item (click)="eliminar(item)">
+                <mat-icon>delete</mat-icon>Eliminar
+            </button>
+        </ng-template>
+    </mat-menu>
+</div>
