--- a/angular-ui/src/app/modules/dashboard/maps-section/grid-view/grid-view.component.html
+++ b/angular-ui/src/app/modules/dashboard/maps-section/grid-view/grid-view.component.html
@@ -1,3 +1,10 @@
 <div class="grid-view-container">
-    
+    <div class="container-file" *ngFor="let map of maps" (click)="onClick($event,map)">
+        <div class="file">
+
+        </div>
+        <div class="name-file">
+            <p>{{ map.name}}</p>
+        </div>
+    </div>
 </div>
