--- a/angular-ui/src/app/modules/dashboard/maps-section/grid-view/grid-view.component.css
+++ b/angular-ui/src/app/modules/dashboard/maps-section/grid-view/grid-view.component.css
@@ -2,6 +2,13 @@
     width: 100%;
     height: 100%;
     overflow: auto;
+    /* background: yellow; */
+}
+
+.drawer-container{
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
 }
 
 .container-file{
