--- a/angular-ui/src/app/modules/dashboard/maps-section/grid-view/view-detail/view-detail.component.html
+++ b/angular-ui/src/app/modules/dashboard/maps-section/grid-view/view-detail/view-detail.component.html
@@ -2,7 +2,7 @@
     <div class="header">
         <h1 class="header-titulo">Detalle</h1>
         <!-- (click)="close()" -->
-        <div style="cursor: pointer">
+        <div style="cursor: pointer" (click)="close()">
             <mat-icon>close</mat-icon>
         </div>
     </div>
