--- a/angular-ui/src/app/modules/dashboard/maps-section/grid-view/view-detail/view-detail.component.css
+++ b/angular-ui/src/app/modules/dashboard/maps-section/grid-view/view-detail/view-detail.component.css
@@ -38,3 +38,15 @@
     padding: 10px;
     margin-top: 5px;
 }
+
+.contenedor-mensaje{
+    width: 100%;
+    height: 100%;
+}
+
+.flexible{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
