--- a/angular-ui/src/app/modules/dashboard/maps-section/list-view/list-view.component.html
+++ b/angular-ui/src/app/modules/dashboard/maps-section/list-view/list-view.component.html
@@ -87,7 +87,7 @@
             <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="example-element-row"
                 [class.example-expanded-row]="expandedElement === element"
                 (contextmenu)="contextMenu($event, element)"
-                (click)="expandedElement = expandedElement === element ? null : element">
+                (click)="reportClickEvent($event, element)">
             </tr>
             <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
         </table>
