--- a/angular-ui/src/app/modules/dashboard/maps-section/maps-section.component.html
+++ b/angular-ui/src/app/modules/dashboard/maps-section/maps-section.component.html
@@ -16,7 +16,8 @@
 	<form appDragDrop (fileDropped)="subirArchivo($event)" class="contenedor-lista">
 		<div class="view-container">
 			<!-- vista lista -->
-			<app-list-view *ngIf="isListView"
+			<app-list-view #listView
+        *ngIf="isListView"
         [maps]="maps"
         (onClick)="onClick($event)"
         (onContextMenu)="onContextMenu($event)"
@@ -42,7 +43,10 @@
 
 <mat-menu #contextMenu="matMenu">
     <ng-template matMenuContent>
-		<button *ngIf="!(mapsSectionService.isListView)" mat-menu-item (click)="openViewDetail()">
+        <button *ngIf="item && selectedMaps.length === 1 && item.ext == 'mbtiles'" mat-menu-item (click)="openMap(item)">
+          <mat-icon>search</mat-icon>Visualizar mapa
+        </button>
+		    <button *ngIf="!isListView" mat-menu-item (click)="openViewDetail()">
             <mat-icon>details</mat-icon>Ver detalle
         </button>
         <button *ngIf="item && item.ext == 'mbtiles'" mat-menu-item (click)="download()">
